# hot_dog_rs

./: .gitignore  Cargo.toml  README.md  dogs.txt  hotdog.db
.history/assets/: main_20250423165517.css
.history/src/: guide_component_20250423164213.rs  guide_component_20250423164217.rs  guide_component_20250423164312.rs  guide_component_20250423164319.rs  guide_component_20250423164323.rs  guide_rsx_20250423164847.rs  guide_rsx_20250423164849.rs  guide_rsx_20250423164851.rs  guide_rsx_20250423164856.rs  guide_rsx_20250423164900.rs  guide_rsx_20250423164907.rs  guide_rsx_20250423164909.rs  guide_rsx_20250423164912.rs  guide_rsx_20250423164916.rs  guide_rsx_20250423164919.rs  guide_rsx_20250423164921.rs  guide_rsx_20250423164926.rs  guide_rsx_20250423164927.rs  guide_rsx_20250423164934.rs  guide_rsx_20250423164938.rs  guide_rsx_20250423164941.rs  guide_rsx_20250423164945.rs  guide_rsx_20250423164948.rs  guide_rsx_20250423164953.rs  guide_rsx_20250423165000.rs  guide_rsx_20250423165002.rs  guide_rsx_20250423165015.rs  guide_rsx_20250423165018.rs  guide_rsx_20250423165024.rs  guide_rsx_20250423165027.rs  guide_rsx_20250423165031.rs  guide_rsx_20250423165033.rs  guide_rsx_20250423165038.rs  guide_rsx_20250423165041.rs  guide_rsx_20250423165046.rs  guide_rsx_20250423165048.rs  guide_rsx_20250423165049.rs  guide_rsx_20250423165100.rs  guide_rsx_20250423165109.rs  hello_world_desktop_20250423164553.rs  (+40 more)
src/: backend.rs  main.rs
src/components/: favorites.rs  mod.rs  nav.rs  view.rs
